--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,12 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Personal Git Ignores
+old-scripts
+pictures
+plots
+stimuli-pictures
+results
+
+*.jpg
